src/Components/Header/Header.css
.Header {
    color: white;
    width: 100vw;
    background-color: #1E1E2E;
    box-sizing: border-box;
    height: clamp(60px, 5vw, 52px);
    box-sizing: border-box;
    display: flex;
    align-items: center;
}

.header-logo{
    width: 40px;
    height: auto;
    margin-left: clamp(10px, 2vw, 21px);
    transition: transform 0.1s ease;


    &:hover{
        cursor: pointer;
        transform: scale(1.03);
    }
}

.Header h1 {
    margin-left: clamp(4px, 1.5vw, 10px);
    color: #CDD6F4;

    &:hover{
        cursor: pointer;
        color: #E6E9FF;
    }
}


.text-highlight{
    color: #f5bde6;

    &:hover{
        color: #ffd6f2;
    }
}

